--- a/examples/react-usage-vue-bridge/index-build.html
+++ b/examples/react-usage-vue-bridge/index-build.html
@@ -6,8 +6,8 @@
     <title>React 18 App</title>
   </head>
   <body>
-    <a href="index.html">go to Vue 3 bridge</a> | <a href="index-v2.html">go to Vue 2 bridge</a> |
-    <a href="index-v3.html">go to Vue 2 & Vue 3 bridge </a>
+    <a href="index-v3.html">go to Vue 3 bridge</a> | <a href="index-v2.html">go to Vue 2 bridge</a> |
+    <a href="index.html">go to Vue 2 & Vue 3 bridge </a>
     <div id="root"></div>
   </body>
 </html>
